--- a/crash_let/src/main/res/layout/crash_activity.xml
+++ b/crash_let/src/main/res/layout/crash_activity.xml
@@ -15,15 +15,28 @@
         app:title="Crash Report"
         app:titleTextColor="@android:color/white" />
 
-    <android.support.v4.widget.NestedScrollView
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tablayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="?android:attr/actionBarSize"
+        android:background="#464646"
+        app:tabGravity="fill"
+        app:tabIndicatorColor="#F47023"
+        app:tabMode="fixed"
+        app:tabSelectedTextColor="#F47023"
+        app:tabTextColor="@android:color/white" />
+
+    <android.support.v4.widget.NestedScrollView
+        android:id="@+id/crashNSV"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="16dp"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="16dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -151,4 +164,80 @@
             </LinearLayout>
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
+
+    <LinearLayout
+        android:id="@+id/requestLL"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#2b2b2b"
+        android:orientation="vertical"
+        android:padding="16dp">
+
+        <TextView
+            android:id="@+id/methodType"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/rect_bg_blue"
+            android:fontFamily="sans-serif-medium"
+            android:padding="5dp"
+            android:text="GET."
+            android:textColor="@android:color/white"
+            android:textSize="18dp" />
+
+        <HorizontalScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/rect_bg_light">
+
+            <TextView
+                android:id="@+id/urlTxt"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:fontFamily="sans-serif"
+                android:padding="5dp"
+                android:text="url//adf"
+                android:textColor="@android:color/white"
+                android:textSize="15dp"
+                android:textStyle="italic" />
+        </HorizontalScrollView>
+
+        <android.support.v4.widget.NestedScrollView
+            android:layout_width="match_parent"
+            android:id="@+id/nsvT"
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/params"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:id="@+id/responseCode"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="12dp"
+                    android:background="@drawable/rect_bg_orange"
+                    android:fontFamily="sans-serif-medium"
+                    android:padding="5dp"
+                    android:text="Response"
+                    android:textColor="@android:color/white"
+                    android:textSize="18dp" />
+
+                <TextView
+                    android:id="@+id/responseTV"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@android:color/white"
+                    android:padding="5dp"
+                    android:textColor="@android:color/black"
+                    android:textSize="13dp" />
+            </LinearLayout>
+        </android.support.v4.widget.NestedScrollView>
+    </LinearLayout>
+
 </LinearLayout>
